--- a/public/stylesheets/builder.scss
+++ b/public/stylesheets/builder.scss
@@ -13,5 +13,6 @@
 @import 'components/3d-img';
 @import 'components/3d-me';
 @import 'components/night-mode';
+@import 'components/lazy-loader';
 
 @import 'views/home';
