--- a/src-jade/templates/index.jade
+++ b/src-jade/templates/index.jade
@@ -9,6 +9,7 @@ block content
       include partials/box
       include partials/box
       include partials/box
+      include partials/box
       img-3d.me
       p-3d(three-d-text="").writer
 
