--- a/public/stylesheets/components/3d-paragraph.scss
+++ b/public/stylesheets/components/3d-paragraph.scss
@@ -1,7 +1,8 @@
 p-3d,
 p-3d-medium,
-p-3d-large, {
+p-3d-large {
   display: inline-block;
+  white-space: pre-wrap;
 
   section > header > & {
     display: block;
@@ -21,7 +22,8 @@ p-3d-large, {
 
   margin: 2rem 0;
   display: inline-block;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
   position: relative;
 
   &:before {
@@ -35,6 +37,7 @@ p-3d-large, {
     pointer-events: none;
     transform: translateZ(-80rem);
     opacity: 0.07;
+    white-space: pre-wrap;
   }
 
   &.writer:before {
