--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -411,7 +411,8 @@ html {
 }
 @media only screen and (max-width: 480px) {
   html {
-    font-size: 0.5rem;
+    font-size: 0.75rem;
+    line-height: 1.5;
   }
   html body {
     max-width: 80vw;
