--- a/public/stylesheets/common/elements.scss
+++ b/public/stylesheets/common/elements.scss
@@ -9,6 +9,7 @@ html {
   overflow-x: hidden;
   overflow-y: auto;
   background: white;
+  scroll-behavior: smooth;
 
   @include small {
     font-size: 0.75rem;
