--- a/public/stylesheets/components/3d-img.scss
+++ b/public/stylesheets/components/3d-img.scss
@@ -1,6 +1,8 @@
 img-3d {
   display: block;
   position: relative;
+  will-change: transform;
+  transform: translateZ(0);
 
   &:before {
     position: absolute;
