--- a/public/stylesheets/components/3d-paragraph.scss
+++ b/public/stylesheets/components/3d-paragraph.scss
@@ -5,8 +5,10 @@ p-3d-large {
   white-space: pre-wrap;
   margin: 2rem 0;
   font-size: 1.2rem;
-  line-height: 1.8rem;
+  line-height: 2.1rem;
   position: relative;
+  will-change: transform;
+  transform: translateZ(0);
 
   section > header > & {
     display: block;
