--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ ${renderList(security, '         ')}
 ╰ <a href="mailto:pierre.reimertz@gmail.com">email</a>`
 ---
 
-<Layout title="reimertz.co">
+<Layout title="reimer.tz">
   <all-my-secret-api-keys></all-my-secret-api-keys>
   <main class="tre-d">
     <header>
