--- a/src/pages/tiny-tiger.astro
+++ b/src/pages/tiny-tiger.astro
@@ -30,7 +30,7 @@ ${renderList(tinyTiger, '', { addPlayButton: true }).replace(/target="_blank"/g,
 <a href="/">← back home</a>`
 ---
 
-<Layout title="tiny tiger - reimertz.co">
+<Layout title="tiny tiger">
   <main class="tre-d">
     <header>
       <img-3d class="me"></img-3d>
